@@ -1,3 +1,4 @@
+* BUG#7873 Refactorisation et amélioration du calcul du payment_amount
 * BUG#9347 Prise en compte du job_size dans le batch de succès des prélèvements
 * BUG#9413 Correction sur le calcul du type de paiement lors de sa création à partir des lignes comptables
 * BUG#9329 Ajout des autorisations à party.party.payment_direct_debit
