@@ -1,3 +1,4 @@
+* BUG#7873 Refactor and improve payment amount calculation
 * BUG#9347 Properly use job_size in payment succeed batch
 * BUG#9413 Properly calculate payment kind from move lines when creating payments
 * BUG#9329 Add authorization to party.party.payment_direct_debit
